@@ -1,7 +1,7 @@
 package com.agh.hydra.wiki.dao;
 
+import com.agh.hydra.wiki.entity.RecruitmentInfoDetailsEntity;
 import com.agh.hydra.wiki.entity.RecruitmentInfoEntity;
-import com.agh.hydra.wiki.model.InformationDetails;
 import com.agh.hydra.wiki.model.RecruitmentInfoFilter;
 import org.apache.ibatis.annotations.Mapper;
 import org.apache.ibatis.annotations.Param;
@@ -19,7 +19,7 @@ public interface WikiRepository {
                                @Param("informationId") Long informationId,
                                @Param("vote") String vote);
 
-    List<InformationDetails> getRecruitmentInformation(RecruitmentInfoFilter filter);
+    List<RecruitmentInfoDetailsEntity> getRecruitmentInformation(RecruitmentInfoFilter filter);
 
     long getInformationCount(RecruitmentInfoFilter filter);
 }
